--- a/src/Yosai/CMakeLists.txt
+++ b/src/Yosai/CMakeLists.txt
@@ -1,8 +1,10 @@
-set(INCROOT ${CMAKE_CURRENT_SOURCE_DIR}/../../include/${CMAKE_PROJECT_NAME})
+set(INCROOT ${CMAKE_CURRENT_SOURCE_DIR}/../../include/Yosai)
 set(SRCROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
+set(LIBS sfml-graphics sfml-window sfml-system sfml-audio)
+#set(LIBS SFML::graphics SFML::window SFML::system SFML::audio)
 set(LIBS ${LIBS} kigen)
-set(LIBS ${LIBS} ImGui-SFML::ImGui-SFML)
+set(LIBS ${LIBS} ImGui-SFML)
 
 # Files
 set(FILES_HEADER
@@ -35,6 +37,6 @@ set(FILES_SRC
         ${SRCROOT}/main.cpp
     )
 
-add_executable(${EXECUTABLE_NAME} ${FILES_HEADER} ${FILES_SRC})
-target_link_libraries(${CMAKE_PROJECT_NAME} ${LIBS})
+add_executable(Yosai ${FILES_HEADER} ${FILES_SRC})
+target_link_libraries(Yosai ${LIBS})
 
