--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -14,11 +14,10 @@ message(STATUS "Fetching third party libraries")
 #======================================
 
 set(SFML_VERSION 2.5.1)
-set(IMGUI_VERSION 1.68)
-set(IMGUI_SFML_VERSION 2.0)
+set(IMGUI_VERSION 1.76)
+set(IMGUI_SFML_VERSION 2.1)
 
-# It's nice to get stripped-down release zips instead of cloning
-# a repo and checking out a tag
+# It's nice to get stripped-down release zips instead of cloning a repo and checking out a tag
 FetchContent_Declare(
   SFML
   URL "https://github.com/SFML/SFML/archive/${SFML_VERSION}.zip"
@@ -32,8 +31,9 @@ FetchContent_Declare(
 # Or by tag...
 FetchContent_Declare(
   imgui-sfml
-  GIT_REPOSITORY https://github.com/eliasdaler/imgui-sfml.git
-  GIT_TAG        develop
+  URL "https://github.com/eliasdaler/imgui-sfml/archive/v${IMGUI_SFML_VERSION}.zip"
+  #GIT_REPOSITORY https://github.com/eliasdaler/imgui-sfml.git
+  #GIT_TAG        develop
   # GIT_COMMIT 5f54b69b6aee18db846c81633f86f78c2586dded
   # ^ or like this - sometimes it's better because FetchContent won't look
   # into remote to see if branch head was updated or not - good for stable
@@ -46,3 +46,5 @@ add_subdirectory(imgui-sfml)
 
 #======================================
 message(STATUS "Fetching thirdparty libraries done")
+
+include_directories(JSON)
